--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/chat.css" />
-    <title>Chat-Bot</title>
+    <title>chat-bot</title>
 </head>
 
 <body>
